<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Omah Nyewo</string>
    <string name="action_settings">Settings</string>
    <string name="version">Versi 0.1 Beta</string>
    <string name="company">Qonky Studio © 2014</string>
    
    <!-- asset text -->
     
    <string name="header_text_kontrakan">Rumah Kontrakan</string>
    <string name="small_text_kontrakan">Cari Semua Info Tentang Kontrakan</string>
    <string name="header_text_kost">Rumah Kost</string>
    <string name="small_text_kost">Cari Semua Info Tentang Rumah Kost</string>
    <string name="about_tittle">Omah Nyewo</string>
    <string name="header_login_text">Silahkan Login Untuk Memasang Iklan di OmahNyewo.com</string>
    
    
    <!--  content description -->
    <string name="image_about">Asset Image About</string>
    <string name="my_location">My Location</string>
    
    
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    

</resources>
