<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_abu" >

    <ImageView
        android:id="@+id/imageAboutLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image_about"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/AboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageAboutLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/about_tittle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AboutText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_centerHorizontal="true"
        android:text="@string/company"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

</RelativeLayout>